--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
