--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.0",
     "express-jwt": "^3.0.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-nodemon": "^2.0.4",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.2",
